<resources>
    <string name="app_name">InteriorDesigner</string>
    <string name="title_activity_start">StartActivity</string>

    <string name="furniture_catalog_btn">Catalog</string>
    <string name="furniture_catalog_title">Furniture catalog</string>
    <string name="furnitureImage">Furniture image</string>

    <string name="btnNewProject">New project</string>
    <string name="title_newProject">New Project</string>

    <string name="btnNewRoomPlan">New room plan</string>
    <string name="btnEditRoomPlan">Edit room plan</string>
    <string name="btnAddFurnitures">Add furnitures</string>
    <string name="btnEditFurnitures">Edit furnitures</string>


    <string name="allCategory">All categories</string>

    <string name="projectName">Project name</string>
    <string name="description">Description</string>
    <string name="create">Create</string>
    <string name="cancel">Cancel</string>
    <string name="back">Back</string>
    <string name="save">Save</string>
    <string name="delete">Delete</string>

    <string name="backToMenu">Back to menu</string>
    <string name="DB_notAvailable">Database is not available</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


</resources>
